[gd_scene load_steps=13 format=3 uid="uid://cu4fl26iih84"]

[ext_resource type="Script" path="res://Scenes/planta.gd" id="1_83y3h"]
[ext_resource type="Texture2D" uid="uid://botoipbocmc7l" path="res://Assets/Sprites/planta.png" id="1_w3ag3"]
[ext_resource type="AudioStream" uid="uid://ccaxg753c64lf" path="res://Musica/smb_kick.wav" id="3_78l1v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3bfu"]
size = Vector2(16, 24)

[sub_resource type="Animation" id="Animation_wmj50"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_mli8u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_afo0a"]
resource_name = "Salir del tubo"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 32), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 32), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wpw7d"]
resource_name = "Entrar al tubo"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1.27456),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6rsm"]
_data = {
"Entrar al tubo": SubResource("Animation_wpw7d"),
"RESET": SubResource("Animation_mli8u"),
"Salir del tubo": SubResource("Animation_afo0a"),
"idle": SubResource("Animation_wmj50")
}

[sub_resource type="Animation" id="Animation_nn7wl"]
resource_name = "dile"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_dapcj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mx2jl"]
_data = {
"RESET": SubResource("Animation_dapcj"),
"idle": SubResource("Animation_nn7wl")
}

[node name="planta" type="CharacterBody2D" groups=["enemigos", "planta"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_83y3h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_w3ag3")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n3bfu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n6rsm")
}

[node name="idle_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mx2jl")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_78l1v")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
